# wellknown-worker-rs

./: .gitignore  Cargo.toml  README.md  build.rs  wrangler.toml
src/: handlers.rs  lib.rs  security.txt  webfinger_response.json
